Fixed weird scaling on mobile + font sizes
On mobile, the website is not zoomed out to 0.8 (`initial-scale=0.8`) anymore, and the font size is adjusted accordingly (12px on mobile).

--- a/makerspace/static/makerspace/css/equipment.css
+++ b/makerspace/static/makerspace/css/equipment.css
@@ -64,14 +64,6 @@
 }
 
 
-/* --- equipment.html --- */
-
-.equipment-description {
-    font-size: 16px;
-    line-height: 26px;
-}
-
-
 /* Switch to mobile layout */
 @media screen and (max-width: 992px) {
 
