--- a/web/static/web/css/index.css
+++ b/web/static/web/css/index.css
@@ -40,21 +40,10 @@
 .events .header a {
     color: rgb(248, 200, 17);
     text-transform: uppercase;
-    font-size: 32px;
 }
 
 .article-text h2 {
     text-align: center;
-}
-
-.article-text p,
-.events .description p {
-    font-size: 16px;
-    line-height: 26px;
-}
-
-.events .header a {
-    font-size: 24px;
 }
 
 .txtborder {
